Changed Hello World with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     </head>
 
     <body>
-        Hello world
+        <div>
+            <img src="images/family.JPG" alt="profil image" />
+            <h2>Hanif Nurmilasari</h2>
+        </div>
     </body>
-    
+
 </html>
