Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head>
 
     <body>
-        <div>
-            <img src="images/family.JPG" alt="profil image" />
-            <h2>Hanif Nurmilasari</h2>
+        <div id="profile-container">
+            <img id="profile-image" src="images/family.JPG" alt="profil image" />
+            <h2 id="profile-name">Hanif Nurmilasari</h2>
         </div>
     </body>
 
