Added new div as header container with id=header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <div id="header">Header</div>
         <div id="profile-container">
             <img id="profile-image" src="images/family.JPG" alt="profil image" />
             <h2 id="profile-name">Hanif Nurmilasari</h2>
