Added new div as footer with id=footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <img id="profile-image" src="images/family.JPG" alt="profil image" />
             <h2 id="profile-name">Hanif Nurmilasari</h2>
         </div>
+        <div id="footer">Footer</div>
     </body>
 
 </html>
